--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,11 +1,11 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "Events and presentations"
 permalink: /talks/
 author_profile: true
 ---
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
+<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of recent events.</a></p>
 
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
