--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Events and presentations"
+title: "Events and Presentations"
 permalink: /talks/
 author_profile: true
 ---
